# m-store

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md
compiler/ebpf/hooks/: io_hook.bpf.c
compiler/mlir/dialects/: mstore.mlir
core/src/: lib.rs
docs/: inference_fabric.md
plugins/nvme/: Cargo.toml
plugins/nvme/src/: lib.rs
plugins/rdma/: Cargo.toml
src/core/engine/: Cargo.toml
src/core/nvme/: Cargo.toml
src/core/rdma/: Cargo.toml
src/core/rdma/src/: lib.rs
src/fabric/plugins/: mcp_engrams.cpp  sglang_radix.cpp  vllm_paged_kv.cpp
